kubernetes/argocd/applications/observability/apps/kibana/service-tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-tcp-falco
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  type: ClusterIP
  selector:
    kibana.k8s.elastic.co/name: kibana
  ports:
  - name: tcp-falco
    port: 9030
    targetPort: 9030
    protocol: TCP
